--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -4657,3 +4657,6 @@ msgstr ""
 "i ganfod pa ddatganiad sy’n briodol i’ch sefyllfa chi a phwy all "
 "weithredu fel tyst pan fyddwch yn llofnodi eich datganiad."
 
+#: grc/templates/start-application/email-address.html:19
+msgid "This is new text"
+msgstr "Welsh translation"
