--- a/messages.pot
+++ b/messages.pot
@@ -3887,7 +3887,7 @@ msgid "Upload files"
 msgstr ""
 
 #: grc/templates/upload/_upload-files-section.html:87
-msgid "The files must be a JPG, BMP, PNG, TIF or PDF and be smaller than 10MB"
+msgid "The files must be a JPG, BMP, PNG, TIF or PDF and smaller than 10MB. The file name must not contain special characters such as: \ / : * ? “ < > |"
 msgstr ""
 
 #: grc/templates/upload/_upload-files-section.html:98
